Round 2 of updates: -Reverted back undesirable changes as requqested in PR -Added a gradient animation to the text containing "hero__punchline" class in home.css -Updated the CSS layouts in releases.css to fix non-responsive design in smartphones -Altered the CSS and html tags for FAQ in faq.css and faq.njk -Added overflow scroll for markdown elements in faq.html -Added a scroll-to-top overlay button for all pages (created scroll.njk and _scroll.css) -Added padding in footer to prevent the scroll-to-top overlay button from overlapping the footer elements

--- a/src/styles/pages/_home.css
+++ b/src/styles/pages/_home.css
@@ -56,21 +56,16 @@
 }
 
 .hero__punchline {
-  font-weight: var(--font-semibold);
-  -webkit-text-fill-color: transparent;
-
-  background-color: var(--color-primary);
-  background-image: linear-gradient(
-    268.67deg,
-    var(--color-primary) 3.43%,
-    var(--color-secondary) 99%
-  );
-  background-size: 100%;
+  text-align: center;
+  background: linear-gradient(268.67deg, var(--color-primary) 20%, var(--color-secondary) 40%, var(--color-secondary) 60%, var(--color-primary) 80%);
+  background-size: 200% auto;
+  color: #000;
   background-clip: text;
-
-  & span {
-    white-space: nowrap;
-  }
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 700ms linear infinite;
+  
 }
 
 .hero__desc {
@@ -196,4 +191,22 @@
   display: flex;
   gap: 0.8ch;
   margin-block-end: 0.25rem;
+}
+
+.divbox {
+  background-color: var(--color-secondary);
+  border-radius: 1em;
+  padding: 2%;
+}
+
+.divbox >  p {
+  color: black;
+}
+
+
+@keyframes shine {
+  to {
+    
+    background-position: 200% center;
+  }
 }
