--- a/src/styles/pages/_releases.css
+++ b/src/styles/pages/_releases.css
@@ -6,8 +6,7 @@
 }
 
 .releases__list > li {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 20% 80%;
   gap: 1rem;
 }
 
@@ -64,4 +63,8 @@
 .releases__markdown p {
   margin-block-start: 0;
   margin-block-end: 1rem;
+}
+
+.releases__markdown {
+  overflow: auto;
 }
